# experiments-2025-aaai-sparseful

./: .gitignore  pyproject.toml
data/METR-LA/: clusters-test.csv  clusters-train.csv  clusters-val.csv  clusters.csv
src/centralized/: main.py
src/common/: __init__.py
src/data-analysis/: main.py
src/experiments/centralized/: main.py
src/experiments/common/: __init__.py
src/experiments/data-analysis/: main.py
src/federated/server/: FedAvgServer.py
