[tool.poetry]
name = "experiments-2025-aaai-sparseful"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
numpy = "<2.3"
tslearn = "^0.6.4"
tables = "^3.10.2"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scipy = "^1.16.0"
networkx = "^3.5"
torch = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
